# bochica

./: .env.example  .gitignore  ADMIN_CREDENTIALS.txt  ARCHITECTURE-UPDATE.md  COMMISSION-WALLET-SETUP.md  CONTINUE.md  CORRECT_ESCROW_SEED.txt  DEPLOYMENT_STATUS.md  ESCROW_IMPLEMENTATION_SUMMARY.md  ESCROW_INVESTMENT_UPDATE.md  ESCROW_SETUP_COMPLETE.md  FINAL_IMPLEMENTATION.md  GAS-FEES.txt  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_STATUS.md  LOANS_TABLE_FIX.md  MIGRATION-README.md  MVP_STATUS.md  PASEO_DEPLOYMENT_SUMMARY.md  PROJECT_STATUS.md  README.md  README.md.backup-20251002-105627  REPAYMENT-TRACKING-SYSTEM.md  SETUP.md  WITHDRAWAL-DEBUGGING-COMPLETE.md  WITHDRAWAL-FIX-SUMMARY.md  WITHDRAWAL_COMMISSION_IMPLEMENTATION.md  WITHDRAWAL_IMPLEMENTATION.md  add-user-profiles.sql  check-derivation-paths.js  check-env-seed.js  check-lockup-constraint.sql  check-project-status.js  check-project.js  check-seed-addresses.js  check-seed-async.js  complete-commitments-fix.sql  deploy-contract.js  deploy-mainnet.js  ecosystem.config.js  (+38 more)
app/: layout.tsx  page.tsx
components/: Header.tsx  Header.tsx.backup-dot-20251002-104240  RepaymentTracker.tsx
contexts/: WalletContext.tsx  WalletContext.tsx.backup-dot-20251002-100918
contracts/: DOWNLOAD_CONTRACT.sh  IMPLEMENTATION_SUMMARY.md
contracts/bochica-lending/: CORE_COMPLETE.md  Cargo.toml  README.md  lib.rs
lib/: financial.ts  polkadot.ts  polkadot.ts.backup  polkadot.ts.backup-20251002-093354  polkadot.ts.backup-escrow-20251002-094914  supabase.ts
migrations/: 004_complete_withdrawal_system.sql
public/: deploy.html  (+4 more)
(+41 files in other folders)
