[package]
name = "bochica_lending"
version = "0.1.0"
authors = ["Francisco Cordoba Otalora"]
edition = "2021"

[dependencies]
ink = { version = "5.0.2", default-features = false }

[lib]
name = "bochica_lending"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
